fixed background clipping on home & signup pages

--- a/public/CSS/app.css
+++ b/public/CSS/app.css
@@ -9,6 +9,7 @@ html, body
 {
   margin: 0px;
   padding: 0px;
+  height: 100%;
 
 }
 
@@ -143,7 +144,7 @@ a {
   justify-content: center;
   text-align: center;
   height: 100%;
-  padding-bottom: 10%;
+  padding-bottom: 15%;
 }
 
 
@@ -530,6 +531,7 @@ ul li:nth-child(5n){
   font-size: 14px;
   font-family: 'Balsamiq Sans';
   border-radius: 10%;
+  cursor: pointer;
 }
 
 
